- Fix bug: browser buttons were always enabled.
- Turn on manual sorting by default for new databases.
- When checking for new articles, include articles within 24 hours before last update,
  because feeds sometimes provide inaccurate dates.
- Assign new id to non-duplicate article with same id as existing article.
- Set our own last update date. Don't rely on the feed.

2.1.0.2103
----------
- Fix next unread behavior in sorted article list.
- Select a new subscription after dragging from an external source.
- Add Applescript support for retrieving html source of article pane.
- Fix bug: only use xml:base for relative urls.
- Always reload current folder after refresh in report layout, preserving currently selected article if necessary.
- Mark article unread when the article text has changed.
- Add "Get Info" to folder contextual menu.
- Return key in folders list opens home page.
- Changed wording of expired articles preference.
- Single-click folder to rename.
- Limit summary text to 150 characters.
- Add Folder submenu to main menu.
- Fix bug: multiple layouts receiving notifications.
- Fix bug: folders tree sort method wasn't recovered properly from database after plist deletion.
- Extend copyright to all contributors.

2.1.0.2102
----------
- Fixed bug: folder attributes (e.g., unread count) not always written to database.
- Don't reload current folder after refresh if preference is set to mark articles read automatically.
- Avoid leaking or crashing with URL connections.
- Move storage of preference for folder sort method from preferences file to database,
  so that it (and manual sort order) can survive deletion of preferences file.
- Enable reloading of web page that never loaded because of error.
- Fixed bug: When deleting multiple folders, the currently selected folder remained selected.
- Enable use of backward delete key.
- Removed multiple delete commands from main menu.